--- a/css/style.css
+++ b/css/style.css
@@ -3534,7 +3534,7 @@ img.lazy-image.loaded {
   display: inline-block;
   line-height: 1.6em;
   font-size: 16px;
-  color: #9b9fa6;
+  color: #000;
   font-weight: 400;
   margin: 0 0 20px;
 }
@@ -3614,7 +3614,7 @@ img.lazy-image.loaded {
 }
 
 .services-section .sec-title .lower-text {
-  color: #999b9f;
+  color: #fff;
 }
 
 .services-section .row {
