--- a/css/style.css
+++ b/css/style.css
@@ -8927,6 +8927,7 @@ img.lazy-image.loaded {
   padding-bottom: 20px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  height: 320px;
 }
 
 @media (min-width: 992px) {
